# GSCAN

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: DAEGC.npy  DAEGC_cora.npy  edges.npy
gscan/: __init__.py  evaluation.py  gnn.py  gscan.py  models.py
